--- a/NewYork.html
+++ b/NewYork.html
@@ -82,7 +82,7 @@ body {font-family: Verdana,sans-serif;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="img_New_York_City_view.jpg" style="width:100%">
+  <img src="New_York_City_view.jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
