--- a/Louisiana.html
+++ b/Louisiana.html
@@ -11,9 +11,9 @@
 <h2 class="w3-center">Automatic Slideshow</h2>
 
 <div class="w3-content w3-section" style="max-width:500px">
-  <img class="mySlides" src="img_la.jpg" style="width:100%">
-  <img class="mySlides" src="img_ny.jpg" style="width:100%">
-  <img class="mySlides" src="img_chicago.jpg" style="width:100%">
+  <img class="mySlides" src="yes.jpg" style="width:100%">
+  <img class="mySlides" src="yup.jpg" style="width:100%">
+  <img class="mySlides" src="mhm.jpg" style="width:100%">
 </div>
 
 <script>
