--- a/NewYork.html
+++ b/NewYork.html
@@ -88,13 +88,13 @@ body {font-family: Verdana,sans-serif;}
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="img_fjords_wide.jpg" style="width:100%">
+  <img src="New_York_Fashion_view.jpg" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="img_mountains_wide.jpg" style="width:100%">
+  <img src="New_York_Food.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
