--- a/NewYork.html
+++ b/NewYork.html
@@ -94,7 +94,7 @@ body {font-family: Verdana,sans-serif;}
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="New_York_Food.jpg" style="width:100%">
+  <img src="New_York_Food_view.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
