--- a/NewYork.html
+++ b/NewYork.html
@@ -12,7 +12,7 @@
 
 <div class="w3-content w3-section" style="max-width:500px">
   <img class="mySlides" src="New_York_City_view.jpg" style="width:100%">
-  <img class="mySlides" src="New_York_Fashion_view.jpg" style="width:100%">
+  <img class="mySlides" src="New_York_fashion_view.jpg" style="width:100%">
   <img class="mySlides" src="New_York_Food_view.jpg" style="width:100%">
 </div>
 
