--- a/Homepage.html
+++ b/Homepage.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html> 
 <head>
-<title>Globe Surfer</title>
+<style>
+input[type=text]{
+ width: 130px;
+ box-sizing: border-box;
+ border: 2px solid #ccc;
+ border-radius: 4px;
+ font-size: 16px;
+ background-color: white;
+ background-image: url('searchicon.png');
+ background-postion: 10px 10px;
+ background-repeat: no-repeat;
+ padding: 12px 20px 12px 40px;
+ -webkit-transition: width 0.4s ease-in-out;
+ transition: width 0.4s ease-in-out;
+ }
+ input[type=text]:focus {
+  width: 100%;
+ }
+</style>
 </head>
 <body background="world.map1.jpg">  
 
