--- a/Homepage.html
+++ b/Homepage.html
@@ -22,7 +22,9 @@ input[type=text]{
 </style>
 </head>
 <body background="world.map1.jpg">  
-
+<form>
+  <input type="text" name="search" placeholder="Search...">
+</form>
 </body>
  
   
