--- a/Homepage.html
+++ b/Homepage.html
@@ -76,7 +76,7 @@ input[type=text]{
 }
 </style>
 </head>
-<body background="world.map1.jpg">  
+<body background="world.map1.png">  
 <form>
   <input type="text" name="search" placeholder="Search...">
 </form>
