--- a/Homepage.html
+++ b/Homepage.html
@@ -76,20 +76,20 @@ input[type=text]{
 }
 </style>
 </head>
-<body background="world.map1.png">  
+<body background="world.map2.jpg">  
 <form>
   <input type="text" name="search" placeholder="Search...">
 </form>
  <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
+    <a href="#">Home</a>
     <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
+    <a href="#">Meet Us</a>
+    <a href="#">Help</a>
   </div>
 </div>
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; More</span>
 
 <script>
 function openNav() {
