--- a/Homepage.html
+++ b/Homepage.html
@@ -2,6 +2,18 @@
 <html> 
 <head>
 <style>
+ .bg {
+    /* The image used */
+    background-image: url("world.map2.jpg");
+
+    /* Full height */
+    height: 100%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 input[type=text]{
  width: 140px;
  box-sizing: border-box;
@@ -76,7 +88,7 @@ input[type=text]{
 }
 </style>
 </head>
-<body background="world.map2.jpg">  
+<body>  
 <form>
   <input type="text" name="search" placeholder="Search...">
 </form>
