--- a/Homepage.html
+++ b/Homepage.html
@@ -88,7 +88,7 @@ input[type=text]{
 }
 </style>
 </head>
-<body>  
+<body class="bg">  
 <form>
   <input type="text" name="search" placeholder="Search...">
 </form>
