--- a/Homepage.html
+++ b/Homepage.html
@@ -88,7 +88,9 @@ input[type=text]{
 }
 </style>
 </head>
-<body class="bg">  
+<body>  
+<div class="bg"></div>
+ 
 <form>
   <input type="text" name="search" placeholder="Search...">
 </form>
