--- a/Homepage.html
+++ b/Homepage.html
@@ -2,12 +2,12 @@
 <html> 
 <head>
 <style>
- .bg {
+ body {
     /* The image used */
     background-image: url("world.map2.jpg");
 
     /* Full height */
-    height: 100%; 
+    /*height: 100%; */
 
     /* Center and scale the image nicely */
     background-position: center;
@@ -89,7 +89,7 @@ input[type=text]{
 </style>
 </head>
 <body>  
-<div class="bg"></div>
+
  
 <form>
   <input type="text" name="search" placeholder="Search...">
