--- a/NewYork.html
+++ b/NewYork.html
@@ -59,7 +59,7 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="New_York_Food_view.jpg" style="width:100%">
+    <img src="New_York_ Pizza_view.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>Chicago</h3>
       <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
