--- a/Homepage.html
+++ b/Homepage.html
@@ -2,16 +2,46 @@
 <html> 
 <head>
 <style>
- body {
-    /* The image used */
-    background-image: url("world.map2.jpg");
+.fullscreen-bg {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -100;
+}
 
-    /* Full height */
-    /*height: 100%; */
+.fullscreen-bg__video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
-    /* Center and scale the image nicely */
-    background-repeat: no-repeat;
-    background-size: cover;
+@media (min-aspect-ratio: 16/9) {
+  .fullscreen-bg__video {
+    height: 300%;
+    top: -100%;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  .fullscreen-bg__video {
+    width: 300%;
+    left: -100%;
+  }
+}
+
+@media (max-width: 767px) {
+  .fullscreen-bg {
+    background: url('4k Timeline') center center / cover no-repeat;
+  }
+
+  .fullscreen-bg__video {
+    display: none;
+  }
 }
 input[type=text]{
  width: 200px;
