--- a/Homepage.html
+++ b/Homepage.html
@@ -36,7 +36,7 @@
 
 @media (max-width: 767px) {
   .fullscreen-bg {
-    background: url('4k Timeline') center center / cover no-repeat;
+    background: url('New York City Skyline - 4K Timelapse.mp4') center center / cover no-repeat;
   }
 
   .fullscreen-bg__video {
