--- a/Louisiana.html
+++ b/Louisiana.html
@@ -17,15 +17,15 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-bar w3-black w3-card-2">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BAND</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TOUR</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+    <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">INFO</a>
+    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FOOD</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FASHION</a>
     <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
+      <button class="w3-padding-large w3-button" title="More">CULTURE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="#" class="w3-bar-item w3-button">Merchandise</a>
-        <a href="#" class="w3-bar-item w3-button">Extras</a>
-        <a href="#" class="w3-bar-item w3-button">Media</a>
+        <a href="#" class="w3-bar-item w3-button">Activities</a>
+        <a href="#" class="w3-bar-item w3-button">Night Life</a>
+        <a href="#" class="w3-bar-item w3-button">Interesting Facts</a>
       </div>
     </div>
     <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
@@ -34,10 +34,10 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#band" class="w3-bar-item w3-button w3-padding-large">BAND</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large">TOUR</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large">MERCH</a>
+  <a href="#band" class="w3-bar-item w3-button w3-padding-large">INFO</a>
+  <a href="#tour" class="w3-bar-item w3-button w3-padding-large">FOOD</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-padding-large">FASHION</a>
+  <a href="#" class="w3-bar-item w3-button w3-padding-large">CULTURE</a>
 </div>
 
 <!-- Page content -->
@@ -103,7 +103,7 @@ body {font-family: "Lato", sans-serif}
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+          <img src="cabinfood.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Cabin Resturant</b></p>
             <p class="w3-opacity">Gonzalez, LA</p>
@@ -112,7 +112,7 @@ body {font-family: "Lato", sans-serif}
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+          <img src="larest.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Louisiana Lagniappe Restaurant</b></p>
             <p class="w3-opacity">Baton Rouge, LA</p>
@@ -121,7 +121,7 @@ body {font-family: "Lato", sans-serif}
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+          <img src="atacha.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Atchafalaya</b></p>
             <p class="w3-opacity">New Orleans, LA</p>
@@ -155,31 +155,48 @@ body {font-family: "Lato", sans-serif}
 
   <!-- The Contact Section -->
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
-    <h2 class="w3-wide w3-center">Fashion</h2>
-    <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
-    <div class="w3-row w3-padding-32">
-      <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
-        <i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515<br>
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
-      </div>
-      <div class="w3-col m6">
-        <form action="/action_page.php" target="_blank">
-          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-            </div>
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-            </div>
+    <h2 class="w3-wide w3-center">FASHION</h2>
+      <p class="w3-opacity w3-center"><i>Creative, Colorful, Casual!</i></p><br>
+
+      <ul class="w3-ul w3-border w3-white w3-text-grey">
+        <li class="w3-padding">Say YES! to clothing</li>
+        <li class="w3-padding"><span class="w3-tag w3-red w3-margin-left">Posh Boutique</span></li>
+        <li class="w3-padding"><span class="w3-tag w3-red w3-margin-left">Couleur Boutique</span></li>
+      </ul>
+      <li class="w3-padding"><span class="w3-tag w3-red w3-margin-left">Adrienne's Boutique</span></li>
+      </ul>
+
+      <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+        <div class="w3-third w3-margin-bottom">
+          <img src="poshb.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Posh Boutique</b></p>
+            <p class="w3-opacity">Baton Rouge, LA</p>
+            <p>Posh Boutique opened its first store in Baton Rouge, Louisiana. After much success, Posh Boutique opened its second store in 2012 in Covington, Louisiana </p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
-          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-          <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
-        </form>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <img src="cb.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Couleur Boutique</b></p>
+            <p class="w3-opacity">Shreveport, LA</p>
+            <p>Women's boutique carrying designer clothes & swimwear along with skin-care items & specialty bras.</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <img src="adb.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Adrienne's Boutique</b></p>
+            <p class="w3-opacity">New Orleans, LA</p>
+            <p>Great clothes, nice experience, good values!</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  
 <!-- End Page Content -->
 </div>
 <!-- Add Google Maps -->
