--- a/Louisiana.html
+++ b/Louisiana.html
@@ -159,39 +159,37 @@ body {font-family: "Lato", sans-serif}
       <p class="w3-opacity w3-center"><i>Creative, Colorful, Casual!</i></p><br>
 
       <ul class="w3-ul w3-border w3-white w3-text-grey">
-        <li class="w3-padding">Say YES! to clothing</li>
         <li class="w3-padding"><span class="w3-tag w3-red w3-margin-left">Posh Boutique</span></li>
         <li class="w3-padding"><span class="w3-tag w3-red w3-margin-left">Couleur Boutique</span></li>
-      </ul>
       <li class="w3-padding"><span class="w3-tag w3-red w3-margin-left">Adrienne's Boutique</span></li>
       </ul>
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-          <img src="poshb.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
+          <img src="poshb.jpg" alt="Posh" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-black">
             <p><b>Posh Boutique</b></p>
             <p class="w3-opacity">Baton Rouge, LA</p>
             <p>Posh Boutique opened its first store in Baton Rouge, Louisiana. After much success, Posh Boutique opened its second store in 2012 in Covington, Louisiana </p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
+            <button class="w3-button w3-white w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="cb.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
+          <img src="cb.jpg" alt="Couleur" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-black">
             <p><b>Couleur Boutique</b></p>
             <p class="w3-opacity">Shreveport, LA</p>
             <p>Women's boutique carrying designer clothes & swimwear along with skin-care items & specialty bras.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
+            <button class="w3-button w3-white w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
           <img src="adb.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
+          <div class="w3-container w3-black">
             <p><b>Adrienne's Boutique</b></p>
             <p class="w3-opacity">New Orleans, LA</p>
             <p>Great clothes, nice experience, good values!</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More </button>
+            <button class="w3-button w3-white w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More </button>
           </div>
         </div>
       </div>
