--- a/NewYork.html
+++ b/NewYork.html
@@ -68,8 +68,8 @@ body {font-family: "Lato", sans-serif}
 
   <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">THE BAND</h2>
-    <p class="w3-opacity"><i>We love music</i></p>
+    <h2 class="w3-wide">NEW YORK</h2>
+    <p class="w3-opacity"><i>I LOVE NEW YORK</i></p>
     <p class="w3-justify">New York also known as the big apple is one of the biggest cities in America. It’s a hot spot for Fashion, Food and Culture. This makes the densely populated state no stranger to tourists. New york is home to a very diverse group of people with very different backgrounds. The city shows its appreciation for its diverse population through various cultural parades and festivals.
 </p>
     <div class="w3-row w3-padding-32">
