--- a/Homepage.html
+++ b/Homepage.html
@@ -2,9 +2,9 @@
 <html> 
 <head>
 <style>
-<video playsinline autoplay muted loop poster="New York kklcjkndcjk" id="bgvid">
-    <source src="new yroejwnk.webm" type="video/webm">
-    <source src="newhdftfyycdh.mp4" type="video/mp4">
+<video playsinline autoplay muted loop poster="New York City Skyline - 4K Timelapse.mp4" id="bgvid">
+    <source src="New York City Skyline - 4K Timelapse.webm" type="video/webm">
+    <source src="New York City Skyline - 4K Timelapse.mp4" type="video/mp4">
 </video>
 video#bgvid { 
     position: fixed;
@@ -19,7 +19,7 @@ video#bgvid {
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
-    background: url(newgjbjvfrxesrtj) no-repeat;
+    background: url(New York City Skyline - 4K Timelapse.mp4) no-repeat;
     background-size: cover; 
 }
 }
