--- a/Louisiana.html
+++ b/Louisiana.html
@@ -76,15 +76,15 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>Food</p>
-        <img src="gumbo.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="gumbo.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%" "height=70%">
       </div>
       <div class="w3-third">
         <p>Fashion</p>
-        <img src="fashion.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="fashion.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%" "height=70%">
       </div>
       <div class="w3-third">
         <p>Culture and Attractions</p>
-        <img src="yes.jpg" class="w3-round" alt="Random Name" style="width:60%">
+        <img src="yes.jpg" class="w3-round" alt="Random Name" style="width:60%" "height=70%">
       </div>
     </div>
   </div>
@@ -103,7 +103,7 @@ body {font-family: "Lato", sans-serif}
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-          <img src="cabinfood.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+          <img src="cabinfood.jpg" alt="New York" style="width:100%" "height=70%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Cabin Resturant</b></p>
             <p class="w3-opacity">Gonzalez, LA</p>
@@ -112,7 +112,7 @@ body {font-family: "Lato", sans-serif}
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="larest.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+          <img src="larest.jpg" alt="Paris" style="width:100%" "height=70%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Louisiana Lagniappe Restaurant</b></p>
             <p class="w3-opacity">Baton Rouge, LA</p>
@@ -121,7 +121,7 @@ body {font-family: "Lato", sans-serif}
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="atacha.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+          <img src="atacha.jpg" alt="San Francisco" style="width:100%" "height=70%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Atchafalaya</b></p>
             <p class="w3-opacity">New Orleans, LA</p>
@@ -166,7 +166,7 @@ body {font-family: "Lato", sans-serif}
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-          <img src="poshb.jpg" alt="Posh" style="width:100%" class="w3-hover-opacity">
+          <img src="poshb.jpg" alt="Posh" style="width:100%" "height=70%" class="w3-hover-opacity">
           <div class="w3-container w3-black">
             <p><b>Posh Boutique</b></p>
             <p class="w3-opacity">Baton Rouge, LA</p>
@@ -175,7 +175,7 @@ body {font-family: "Lato", sans-serif}
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="cb.jpg" alt="Couleur" style="width:100%" class="w3-hover-opacity">
+          <img src="cb.jpg" alt="Couleur" style="width:100%" "height=70%" class="w3-hover-opacity">
           <div class="w3-container w3-black">
             <p><b>Couleur Boutique</b></p>
             <p class="w3-opacity">Shreveport, LA</p>
@@ -184,7 +184,7 @@ body {font-family: "Lato", sans-serif}
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="adb.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+          <img src="adb.jpg" alt="San Francisco" style="width:100%" "height=70%" class="w3-hover-opacity">
           <div class="w3-container w3-black">
             <p><b>Adrienne's Boutique</b></p>
             <p class="w3-opacity">New Orleans, LA</p>
