--- a/Homepage.html
+++ b/Homepage.html
@@ -2,25 +2,9 @@
 <html> 
 <head>
 <style>
-<video playsinline autoplay muted loop poster="New York City Skyline - 4K Timelapse.mp4" id="bgvid">
-    <source src="New York City Skyline - 4K Timelapse.mp4.webm" type="video/webm">
-    <source src="New York City Skyline - 4K Timelapse.mp4" type="video/mp4">
-</video>
-video#bgvid { 
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    background: url(New York City Skyline - 4K Timelapse.mp4) no-repeat;
-    background-size: cover; 
+body {
+    background-image: url("img_tree.png");
+    background-repeat: no-repeat;
 }
 }
 input[type=text]{
