--- a/Louisiana.html
+++ b/Louisiana.html
@@ -84,7 +84,7 @@ body {font-family: "Lato", sans-serif}
       </div>
       <div class="w3-third">
         <p>Culture and Attractions</p>
-        <img src="yes.jpg" class="w3-round" alt="Random Name" style="width:60%" "height=70%">
+        <img src="mardi.jpg" class="w3-round" alt="Random Name" style="width:60%" "height=70%">
       </div>
     </div>
   </div>
