--- a/Homepage.html
+++ b/Homepage.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-    background-image: url("img_tree.png");
+    background-image: url("london-city-high-resolution.jpg");
     background-repeat: no-repeat;
 }
 }
