--- a/Homepage.html
+++ b/Homepage.html
@@ -5,6 +5,7 @@
 body {
     background-image: url("london-city-high-resolution.jpg");
     background-repeat: no-repeat;
+    background-size: cover;
 }
 }
 input[type=text]{
