--- a/Homepage.html
+++ b/Homepage.html
@@ -15,6 +15,7 @@ input[type=text]{
  font-size: 16px;
  background-color: white;
  background-image: url('searchicon.png');
+ background-size: 10px 10px;
  background-postion: 5px 5px;
  background-repeat: no-repeat;
  padding: 12px 20px 12px 40px;
