--- a/Homepage.html
+++ b/Homepage.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-    background-image: url("london-city-high-resolution.jpg");
+    background-image: url("flying_gif.gif");
     background-repeat: no-repeat;
     background-size: cover;
 }
