--- a/NewYork.html
+++ b/NewYork.html
@@ -91,7 +91,7 @@ body {font-family: "Lato", sans-serif}
   <!-- The Tour Section -->
   <div class="w3-black" id="tour">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">TOUR DATES</h2>
+      <h2 class="w3-wide w3-center">FOOD</h2>
       <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
 
       <ul class="w3-ul w3-border w3-white w3-text-grey">
