--- a/Homepage.html
+++ b/Homepage.html
@@ -138,11 +138,12 @@ input[type=text]{
 </div>
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; More</span>
 <div class="dropdown">
-  <button class="dropbtn">Dropdown</button>
+  <button class="dropbtn">Food</button>
   <div class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="#">California</a>
+    <a href="#">Louisiana</a>
+    <a href="#">New York</a>
+    <a href="#">Texas</a>
   </div>
 </div>
 
