--- a/Homepage.html
+++ b/Homepage.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-    background-image: url("cities-travel.gif");
+    background-image: url("traveling.gif");
     background-repeat: no-repeat;
     background-size: cover;
 }
