--- a/Homepage.html
+++ b/Homepage.html
@@ -2,9 +2,11 @@
 <html> 
 <head>
 <style>
-body {
-    background-image: url("hipstr.gif");
-    background-repeat: no-repeat;
+html { 
+    background: url(../img/background.jpg) no-repeat center center fixed #000; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
 }
 input[type=text]{
