--- a/Homepage.html
+++ b/Homepage.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 html { 
-    background: url('hipstr.gif') no-repeat center center fixed #000; 
+    background: url(hipstr.gif) no-repeat center center fixed #000; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
