--- a/California.html
+++ b/California.html
@@ -8,7 +8,7 @@
 </style>
 <body>
 
-<h2 class="w3-center">Automatic Slideshow</h2>
+<h2 class="w3-center">California</h2>
 
 <div class="w3-content w3-section" style="max-width:500px">
   <img class="mySlides" src="venice beach photo slideshow.jpg" style="width:100%">
