--- a/Homepage.html
+++ b/Homepage.html
@@ -2,11 +2,21 @@
 <html> 
 <head>
 <style>
-html { 
-    background: url(hipstr.gif) no-repeat center center fixed #000; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.bg {
+    /* The image used */
+    background-image: url("china.jpg");
+
+    /* Full height */
+    height: 100%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 input[type=text]{
