--- a/NewYork.html
+++ b/NewYork.html
@@ -102,11 +102,11 @@ body {font-family: "Lato", sans-serif}
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+          <img src="johns juice.jpg" alt="Johns Juice" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
-            <p><b>New York</b></p>
-            <p class="w3-opacity">Fri 27 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <p><b>John's Juice</b></p>
+            <p class="w3-opacity">SMORGASBURG FOOD MARKET Saturday: 90 Kent Ave, Brooklyn NY Hours- 11 am to 6 pm</p>
+            <p>Stop by Johns Juice fruit stand for a refreshing fruit drink of your choice served in whole fruits  .</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
