--- a/Homepage.html
+++ b/Homepage.html
@@ -139,6 +139,7 @@ input[type=text]{
 <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
+ <span style="font-size:30px;cursor:pointer; float: left;" onclick="openNav()">&#9776; </span>
 <form>
   <input type="text" name="search" placeholder="Search...">
 </form>
@@ -149,7 +150,6 @@ input[type=text]{
     <a href="#">Help</a>
   </div>
 </div>
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; More</span>
 <div class="dropdown">
   <button class="dropbtn">Food</button>
   <div class="dropdown-content">
