--- a/California.html
+++ b/California.html
@@ -3,33 +3,58 @@
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-.mySlides {display:none;}
-</style>
 <body>
 
-<h2 class="w3-center">California</h2>
+<div class="w3-container">
+  <h2>Slideshow Caption</h2>
+  <p>Add a caption text for each image slide with the w3-display-* classes (topleft, topmiddle, topright, bottomleft, bottommiddle, bottomright or middle).</p>
+</div>
 
-<div class="w3-content w3-section" style="max-width:550px">
-  <img class="mySlides" src="venice beach photo slideshow.jpg" style="width:150%">
-  <img class="mySlides" src="in n out picture 1.png" style="width:150%">
-  <img class="mySlides" src="sunset picture.png" style="width:150%">
+<div class="w3-content w3-display-container">
+
+<div class="w3-display-container mySlides">
+  <img src="venice beach photo slideshow.jpg" style="width:100%">
+  <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
+   Venice Beach
+  </div>
+</div>
+
+<div class="w3-display-container mySlides">
+  <img src="in n out picture 1.png" style="width:100%">
+  <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
+    IN-N-OUT Burger
+  </div>
+</div>
+
+<div class="w3-display-container mySlides">
+  <img src="sunset picture.png" style="width:100%">
+  <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
+    Beach Sunset
+  </div>
+</div>
+  
+<button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
+<button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
+
 </div>
 
 <script>
-var myIndex = 0;
-carousel();
+var slideIndex = 1;
+showDivs(slideIndex);
 
-function carousel() {
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-    for (i = 0; i < x.length; i++) {
-       x[i].style.display = "none";  
-    }
-    myIndex++;
-    if (myIndex > x.length) {myIndex = 1}    
-    x[myIndex-1].style.display = "block";  
-    setTimeout(carousel, 2000); // Change image every 4 seconds
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";  
+  }
+  x[slideIndex-1].style.display = "block";  
 }
 </script>
 
