--- a/NewYork.html
+++ b/NewYork.html
@@ -111,11 +111,11 @@ body {font-family: "Lato", sans-serif}
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+          <img src="yo-sushi.jpg" alt="Yo Sushi" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
-            <p><b>Paris</b></p>
-            <p class="w3-opacity">Sat 28 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <p><b>Yo Sushi</b></p>
+            <p class="w3-opacity">498 Red Apple Ct, Central Valley, NY 10917</p>
+            <p> Yo Sushi, located in Central village, New York, is well known for serving sushi on a conveyer belt. the menu is always changing with the hottest recipe trends.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
