--- a/Louisiana.html
+++ b/Louisiana.html
@@ -84,7 +84,7 @@ body {font-family: "Lato", sans-serif}
       </div>
       <div class="w3-third">
         <p>Culture and Attractions</p>
-        <img src="mardi.jpg" class="w3-round" alt="Random Name" style="width:60%" "height=70%">
+        <img src="yes.jpg" class="w3-round" alt="Random Name" style="width:60%" "height=70%">
       </div>
     </div>
   </div>
@@ -195,6 +195,47 @@ body {font-family: "Lato", sans-serif}
       </div>
     </div>
   </div>
+<!--Culture-->  
+  
+  <div class="w3-black" id="tour">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+     <h2 class="w3-wide"><center>Culture</center></h2>
+    <p class="w3-opacity"><i><center>Activities</center></i></p>
+    <p class="w3-justify"><center>I bet you are wondering, what do I do here? Well let me tell you, here are a some fun things to do in this Pelican State!
+</center></p>
+  <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+        <div class="w3-third w3-margin-bottom">
+          <img src="yes.jpg" alt="Posh" style="width:100%" "height=70%" class="w3-hover-opacity">
+          <div class="w3-container w3-black">
+            <p><b>Mardi Gras Parade</b></p>
+            <p class="w3-opacity">Baton Rouge, LA</p>
+            <p>Mardi Gras, aka Shrove Tuesday, or Fat Tuesday, in English, refers to events of the Carnival celebrations, beginning on or after the Christian feasts of the Epiphany (Three Kings Day) and culminating on the day before Ash Wednesday...<a href="http://www.mardigrasneworleans.com/when-is-mardi-gras.html">more info</a>
+ </p>
+            <button class="w3-button w3-white w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <img src="bbb.jpg" alt="Couleur" style="width:100%" "height=70%" class="w3-hover-opacity">
+          <div class="w3-container w3-black">
+            <p><b>Blue Bayou Water Park</b></p>
+            <p class="w3-opacity">East Baton Rouge Parish, LA</p>
+            <p>Blue Bayou Waterpark and Dixie Landin’ are adjacent amusement parks in Baton Rouge, Louisiana. Blue Bayou is a water park and Dixie Landin' is a more traditional amusement park with thrill rides... <a href="https://en.wikipedia.org/wiki/Blue_Bayou_and_Dixie_Landin'">continue</a></p>
+            <button class="w3-button w3-white w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <img src="aqua.jpg" alt="San Francisco" style="width:100%" "height=70%" class="w3-hover-opacity">
+          <div class="w3-container w3-black">
+            <p><b>Aquarium of the Americas</b></p>
+            <p class="w3-opacity">New Orleans, LA</p>
+            <p>The Audubon Aquarium of the Americas is an aquarium in New Orleans, Louisiana, United States. It is run by the Audubon Institute, which also supervises the Audubon Zoo, Audubon Butterfly Garden and Insectarium and Audubon Park...<a href="https://en.wikipedia.org/wiki/Aquarium_of_the_Americas">continue</a></p>
+            <button class="w3-button w3-white w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+    
 <!-- End Page Content -->
 </div>
 <!-- Add Google Maps -->
