--- a/California.html
+++ b/California.html
@@ -5,11 +5,6 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<div class="w3-container">
-  <h2>Slideshow Caption</h2>
-  <p>Add a caption text for each image slide with the w3-display-* classes (topleft, topmiddle, topright, bottomleft, bottommiddle, bottomright or middle).</p>
-</div>
-
 <div class="w3-content w3-display-container">
 
 <div class="w3-display-container mySlides">
@@ -27,7 +22,7 @@
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="sunset picture.png" style="width:100%">
+  <img src="sunset picture 1.png" style="width:100%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
     Beach Sunset
   </div>
