--- a/California.html
+++ b/California.html
@@ -4,6 +4,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
+<div class="w3-container">
+  <h2>California</h2>
+  <p> classes (topleft, topmiddle, topright, bottomleft, bottommiddle, bottomright or middle).</p>
+</div>
 
 <div class="w3-content w3-display-container">
 
