--- a/California.html
+++ b/California.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="sunset picture 1.png" style="width:200%">
+  <img src="beach sunset.jpg" style="width:100%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
     Beach Sunset
   </div>
