--- a/NewYork.html
+++ b/NewYork.html
@@ -120,11 +120,11 @@ body {font-family: "Lato", sans-serif}
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+          <img src="wagamama_usa.jpg" alt="Wagamama" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
-            <p><b>San Francisco</b></p>
-            <p class="w3-opacity">Sun 29 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <p><b>Wagamama</b></p>
+            <p class="w3-opacity">210 5th Ave, New York, NY 10010</p>
+            <p>Wagamama is a ramen resteraunt located in the Flatiorn district. Its famously know for its short rib ramen.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
