--- a/NewYork.html
+++ b/NewYork.html
@@ -131,6 +131,44 @@ body {font-family: "Lato", sans-serif}
       </div>
     </div>
   </div>
+  
+  
+  <div class="w3-black" id="tour">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+      <h2 class="w3-wide w3-center">Fashion</h2>
+      <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
+
+      <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+        <div class="w3-third w3-margin-bottom">
+          <img src="johns juice.jpg" alt="Johns Juice" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>John's Juice</b></p>
+            <p class="w3-opacity">SMORGASBURG FOOD MARKET Saturday: 90 Kent Ave, Brooklyn NY Hours- 11 am to 6 pm</p>
+            <p>Stop by Johns Juice fruit stand for a refreshing fruit drink of your choice served in whole fruits  .</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <img src="yo-sushi.jpg" alt="Yo Sushi" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Yo Sushi</b></p>
+            <p class="w3-opacity">498 Red Apple Ct, Central Valley, NY 10917</p>
+            <p> Yo Sushi, located in Central village, New York, is well known for serving sushi on a conveyer belt. the menu is always changing with the hottest recipe trends.</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <img src="wagamama_usa.jpg" alt="Wagamama" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Wagamama</b></p>
+            <p class="w3-opacity">210 5th Ave, New York, NY 10010</p>
+            <p>Wagamama is a ramen resteraunt located in the Flatiorn district. Its famously know for its short rib ramen.</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Ticket Modal -->
   <div id="ticketModal" class="w3-modal">
