--- a/California.html
+++ b/California.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 <div class="w3-container">
-  <h2>California</h2>
+  <pre><h2>California</h2></pre>
 </div>
 
 <div class="w3-content w3-display-container">
@@ -19,14 +19,14 @@
 
 <div class="w3-display-container mySlides">
   <img src="in n out picture 1.png" style="width:100%">
-  <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
+  <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
     IN-N-OUT Burger
   </div>
 </div>
 
 <div class="w3-display-container mySlides">
   <img src="beach sunset.jpg" style="width:100%">
-  <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
+  <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
     Beach Sunset
   </div>
 </div>
