--- a/NewYork.html
+++ b/NewYork.html
@@ -133,7 +133,7 @@ body {font-family: "Lato", sans-serif}
   </div>
   
   
-  <div class="w3-black" id="tour">
+  <div class="w3-white" id="Fashion">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">Fashion</h2>
       <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
