--- a/NewYork.html
+++ b/NewYork.html
@@ -140,29 +140,29 @@ body {font-family: "Lato", sans-serif}
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-          <img src="johns juice.jpg" alt="Johns Juice" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>John's Juice</b></p>
-            <p class="w3-opacity">SMORGASBURG FOOD MARKET Saturday: 90 Kent Ave, Brooklyn NY Hours- 11 am to 6 pm</p>
-            <p>Stop by Johns Juice fruit stand for a refreshing fruit drink of your choice served in whole fruits  .</p>
+          <img src="necessary.jpg" alt="Necessary Clothing" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-black">
+            <p><b>Necessary Clothing</b></p>
+            <p class="w3-opacity">442 Broadway, New York, NY 10013</p>
+            <p>.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="yo-sushi.jpg" alt="Yo Sushi" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>Yo Sushi</b></p>
+          <img src="kirna.jpg" alt="Kirna Zabete" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-black">
+            <p><b>Kirna Zabete</b></p>
             <p class="w3-opacity">498 Red Apple Ct, Central Valley, NY 10917</p>
-            <p> Yo Sushi, located in Central village, New York, is well known for serving sushi on a conveyer belt. the menu is always changing with the hottest recipe trends.</p>
+            <p> .</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="wagamama_usa.jpg" alt="Wagamama" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>Wagamama</b></p>
-            <p class="w3-opacity">210 5th Ave, New York, NY 10010</p>
-            <p>Wagamama is a ramen resteraunt located in the Flatiorn district. Its famously know for its short rib ramen.</p>
+          <img src="Birchbox.jpg" alt="Birchbox Soho" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-black">
+            <p><b>Birchbox Soho</b></p>
+            <p class="w3-opacity">433 W Broadway, New York, NY 10012</p>
+            <p></p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
