--- a/Louisiana.html
+++ b/Louisiana.html
@@ -55,7 +55,7 @@ body {font-family: "Lato", sans-serif}
     <img src="mhm.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>Bayou</h3>
-      <p><b>Get down and dirty in swamp</b></p>    
+      <p><b>Get down and dirty in the swamp</b></p>    
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
@@ -206,36 +206,74 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
           <img src="yes.jpg" alt="Posh" style="width:100%" "height=70%" class="w3-hover-opacity">
-          <div class="w3-container w3-black">
+          <div class="w3-container w3-white">
             <p><b>Mardi Gras Parade</b></p>
             <p class="w3-opacity">Baton Rouge, LA</p>
             <p>Mardi Gras, aka Shrove Tuesday, or Fat Tuesday, in English, refers to events of the Carnival celebrations, beginning on or after the Christian feasts of the Epiphany (Three Kings Day) and culminating on the day before Ash Wednesday...<a href="http://www.mardigrasneworleans.com/when-is-mardi-gras.html">more info</a>
  </p>
-            <button class="w3-button w3-white w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
           <img src="bbb.jpg" alt="Couleur" style="width:100%" "height=70%" class="w3-hover-opacity">
-          <div class="w3-container w3-black">
+          <div class="w3-container w3-white">
             <p><b>Blue Bayou Water Park</b></p>
             <p class="w3-opacity">East Baton Rouge Parish, LA</p>
             <p>Blue Bayou Waterpark and Dixie Landin’ are adjacent amusement parks in Baton Rouge, Louisiana. Blue Bayou is a water park and Dixie Landin' is a more traditional amusement park with thrill rides... <a href="https://en.wikipedia.org/wiki/Blue_Bayou_and_Dixie_Landin'">continue</a></p>
-            <button class="w3-button w3-white w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
           <img src="aqua.jpg" alt="San Francisco" style="width:100%" "height=70%" class="w3-hover-opacity">
-          <div class="w3-container w3-black">
+          <div class="w3-container w3-white">
             <p><b>Aquarium of the Americas</b></p>
             <p class="w3-opacity">New Orleans, LA</p>
             <p>The Audubon Aquarium of the Americas is an aquarium in New Orleans, Louisiana, United States. It is run by the Audubon Institute, which also supervises the Audubon Zoo, Audubon Butterfly Garden and Insectarium and Audubon Park...<a href="https://en.wikipedia.org/wiki/Aquarium_of_the_Americas">continue</a></p>
-            <button class="w3-button w3-white w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More </button>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More </button>
           </div>
         </div>
       </div>
     </div>
   </div>
+<!--Night Life-->
+ <div class="w3-black" id="tour">
+    <div class="w3-container w3-content w3-padding-14" style="max-width:800px">
     
+    <p class="w3-opacity"><i><center>Night Life</center></i></p>
+    <p class="w3-justify"><center>For the adult community looking for some friday night lights, then here are some fun lovin' choices!
+</center></p>
+  <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+        <div class="w3-third w3-margin-bottom">
+          <img src="club.jpg" alt="Posh" style="width:100%" "height=70%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Brass Room</b></p>
+            <p class="w3-opacity">Lafayette, LA</p>
+            <p>A great space to relax and unwind while listening to a mixture of melodies 
+ </p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <img src="gclub.jpg" alt="Couleur" style="width:100%" "height=70%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Splash Nightclub</b></p>
+            <p class="w3-opacity">Baton Rouge, LA</p>
+            <p>DJs spin a variety of sounds in a multiroom dance club hosting drag nights and other theme events.</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <img src="cclub.jpg" alt="San Francisco" style="width:100%" "height=70%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Cowboys Night Club</b></p>
+            <p class="w3-opacity">Scott, LA</p>
+            <p>Enduring western-theme dance club featuring live zydeco and classic country bands in a roomy venue.</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 <!-- End Page Content -->
 </div>
 <!-- Add Google Maps -->
