--- a/Louisiana.html
+++ b/Louisiana.html
@@ -244,7 +244,7 @@ body {font-family: "Lato", sans-serif}
 </center></p>
   <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-          <img src="club.jpg" alt="Posh" style="width:100%" "height=70%" class="w3-hover-opacity">
+          <img src="brass.jpg" alt="Posh" style="width:100%" "height=70%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Brass Room</b></p>
             <p class="w3-opacity">Lafayette, LA</p>
@@ -254,7 +254,7 @@ body {font-family: "Lato", sans-serif}
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="gclub.jpg" alt="Couleur" style="width:100%" "height=70%" class="w3-hover-opacity">
+          <img src="splash.jpg" alt="Couleur" style="width:100%" "height=70%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Splash Nightclub</b></p>
             <p class="w3-opacity">Baton Rouge, LA</p>
@@ -263,7 +263,7 @@ body {font-family: "Lato", sans-serif}
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="cclub.jpg" alt="San Francisco" style="width:100%" "height=70%" class="w3-hover-opacity">
+          <img src="night.jpg" alt="San Francisco" style="width:100%" "height=70%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Cowboys Night Club</b></p>
             <p class="w3-opacity">Scott, LA</p>
