--- a/NewYork.html
+++ b/NewYork.html
@@ -178,7 +178,7 @@ body {font-family: "Lato", sans-serif}
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
           <img src="necessary.jpg" alt="Necessary Clothing" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-black">
+          <div class="w3-container w3-white">
             <p><b>Necessary Clothing</b></p>
             <p class="w3-opacity">442 Broadway, New York, NY 10013</p>
             <p>.</p>
@@ -187,7 +187,7 @@ body {font-family: "Lato", sans-serif}
         </div>
         <div class="w3-third w3-margin-bottom">
           <img src="kirna.jpg" alt="Kirna Zabete" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-black">
+          <div class="w3-container w3-white">
             <p><b>Kirna Zabete</b></p>
             <p class="w3-opacity">498 Red Apple Ct, Central Valley, NY 10917</p>
             <p> .</p>
@@ -196,7 +196,7 @@ body {font-family: "Lato", sans-serif}
         </div>
         <div class="w3-third w3-margin-bottom">
           <img src="Birchbox.jpg" alt="Birchbox Soho" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-black">
+          <div class="w3-container w3-white">
             <p><b>Birchbox Soho</b></p>
             <p class="w3-opacity">433 W Broadway, New York, NY 10012</p>
             <p></p>
