--- a/Louisiana.html
+++ b/Louisiana.html
@@ -274,6 +274,43 @@ body {font-family: "Lato", sans-serif}
       </div>
     </div>
   </div>
+ 
+ <div class="w3-container w3-black w3-content w3-center w3-padding-34" style="max-width:800px" id="band">
+    <p class="w3-opacity"><i><center>Interesting Facts</center></i></p>
+    <div class="w3-container w3-content w3-padding-34" style="max-width:800px">
+      
+      <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+        <div class="w3-third w3-margin-bottom">
+          <img src="louisiana.jpg" alt="New York" style="width:100%" "height=70%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Interesting Fact #1</b></p>
+            <p class="w3-opacity">OMG Really?!</p>
+            <p>Mamou bills itself as "The Cajun Music Capital of the World." Mamou musicians, in particular the musicians who have perform at Fred's Lounge have been a major force in expanding the audience for Cajun music far beyond Southwest Louisiana.</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <img src="NewOrleans.jpg" alt="Paris" style="width:100%" "height=70%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Interesting Fact #2</b></p>
+            <p class="w3-opacity">THATS AWESOME!</p>
+            <p>Louisiana has the tallest state capitol building in the United States; the building is 450 feet tall with 34 floors.
+</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <img src="french.jpg" alt="San Francisco" style="width:100%" "height=70%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Interesting Fact #3</b></p>
+            <p class="w3-opacity">WOAH!</p>
+            <p>Louisiana is the only state in the union that does not have counties. Its political subdivisions are called parishes.</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 <!-- End Page Content -->
 </div>
 <!-- Add Google Maps -->
