--- a/California.html
+++ b/California.html
@@ -97,7 +97,7 @@ body {font-family: "Lato", sans-serif}
       <ul class="w3-ul w3-border w3-white w3-text-grey">
         <li class="w3-padding">IN-N-OUT Burger<span class="w3-tag w3-red w3-margin-left"></span></li>
         <li class="w3-padding"> Roscoe’s House of Chicken and Waffles<span class="w3-tag w3-red w3-margin-left"></span></li>
-        <a href="http://nicosmexicanfood.menutoeat.com" target="_blank">Nico’s Mexican Food</a>
+        <li class="w3-padding"> <a href="http://nicosmexicanfood.menutoeat.com" target="_blank">Nico’s Mexican Food</a><span class="w3-tag w3-red w3-margin-left"></span></li>
       </ul>
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
