--- a/Texas.html
+++ b/Texas.html
@@ -47,22 +47,22 @@ body {font-family: "Lato", sans-serif}
   <div class="mySlides w3-display-container w3-center">
     <img src="texas_food.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Los Angeles</h3>
-      <p><b>We had the best time playing at Venice Beach!</b></p>   
+      <h3>Food</h3>
+      <p><b>Everything is bigger in Texas!</b></p>   
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
     <img src="texas_fashion.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>New York</h3>
-      <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
+      <h3>Fashion</h3>
+      <p><b>Texas fashion will never go out of style.</b></p>    
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
     <img src="texas_nightlife.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Chicago</h3>
-      <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
+      <h3>Nightlife</h3>
+      <p><b>It's not a Texas club without line dancing.</b></p>    
     </div>
   </div>
 
@@ -92,8 +92,8 @@ body {font-family: "Lato", sans-serif}
   <!-- The Tour Section -->
   <div class="w3-black" id="tour">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">TOUR DATES</h2>
-      <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
+      <h2 class="w3-wide w3-center">Food</h2>
+      <p class="w3-opacity w3-center"><i>Remember to grab a ribeye!</i></p><br>
 
       <ul class="w3-ul w3-border w3-white w3-text-grey">
         <li class="w3-padding">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
