--- a/California.html
+++ b/California.html
@@ -34,10 +34,10 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#band" class="w3-bar-item w3-button w3-padding-large">BAND</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large">FOOD</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large">SOCIAL LIFE</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large">FASHION</a>
+  <a href="#info" class="w3-bar-item w3-button w3-padding-large">INFO</a>
+  <a href="#food" class="w3-bar-item w3-button w3-padding-large">FOOD</a>
+  <a href="#social life" class="w3-bar-item w3-button w3-padding-large">SOCIAL LIFE</a>
+  <a href="#fashion" class="w3-bar-item w3-button w3-padding-large">FASHION</a>
 </div>
 
 <!-- Page content -->
